--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -11,6 +11,7 @@ linters:
     - decorder
     - dupl
     - dupword
+    - err113
     - errcheck
     - exhaustive
     - fatcontext
@@ -24,7 +25,6 @@ linters:
     - godox
     - gofmt
     - goheader
-    # - goimports
     - gosec
     - gosimple
     - govet
@@ -43,7 +43,7 @@ linters:
     - unparam
     - unused
     - usestdlibvars
-    # - varnamelen
+    - varnamelen
     - wastedassign
     - whitespace
     - wrapcheck
