--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,32 +1,72 @@
----
-name: goreleaser
-
 on:
-  push:
-    tags:
-      - 'v*'
+  release:
+    types:
+      - created
 
+env:
+  FILE_NAME: unraid-motd
+  
 jobs:
-  goreleaser:
+  build:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v3
         with:
-          fetch-depth: 0
+          path: tag
+
+      - uses: actions/checkout@v3
+        with:
+          path: main
+          ref: main
 
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version-file: 'go.mod'
+          go-version-file: tag/go.mod
+          cache-dependency-path: tag/go.sum
 
-      - name: Run GoReleaser
-        uses: goreleaser/goreleaser-action@v6
+      - name: Build application
+        run: |
+          cd tag
+          mkdir -p src/usr/local/bin
+          go get .
+          go build -o src/usr/local/bin/motd
+
+      - id: build_files
+        run: |
+          mkdir release
+          cd tag/src
+          tar --owner=0 --group=0 -cJf ../../release/${{ env.FILE_NAME }}-${{ github.event.release.name}}-noarch-1.txz *
+          cd ../../release
+          sha256sum ${{ env.FILE_NAME }}-${{ github.event.release.name}}-noarch-1.txz | awk '{print $1}' > ${{ env.FILE_NAME }}-${{ github.event.release.name}}-noarch-1.txz.sha256
+          echo "checksum=$(cat ${{ env.FILE_NAME }}-${{ github.event.release.name}}-noarch-1.txz.sha256)" >> $GITHUB_OUTPUT
+
+      - uses: shogo82148/actions-upload-release-asset@v1
         with:
-          distribution: goreleaser
-          version: ~> v2
-          args: release --clean
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          upload_url: ${{ github.event.release.upload_url }}
+          asset_path: release/*
+
+      - name: Add checksum to release description
+        uses: djn24/add-comment-to-release@v1
+        with:
+          token: ${{secrets.GITHUB_TOKEN}}
+          comment: |-
+            ${{ env.FILE_NAME }}-${{ github.event.release.name}}-noarch-1.txz : ${{ steps.build_files.outputs.checksum }}
+
+      - name: Template 
+        uses: cuchi/jinja2-action@v1.2.2
+        with:
+          template: main/plugin/motd.j2
+          output_file: main/plugin/motd.plg
+          data_file: main/plugin/motd.json
+          variables: |
+            version=${{ github.event.release.name }}
+            checksum=${{ steps.build_files.outputs.checksum }}
+            changelog=${{ github.event.release.body }}
+
+      - name: Commit plugin file
+        uses: EndBug/add-and-commit@v9
+        with:
+          cwd: main
+          add: 'plugin/motd.plg'
+          default_author: github_actor
