--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -36,10 +36,10 @@ jobs:
         run: |
           mkdir release
           cd tag/src
-          tar --owner=0 --group=0 -cJf ../../release/${{ env.FILE_NAME }}-${{ github.event.release.name}}-noarch-1.txz *
+          tar --owner=0 --group=0 -cJf ../../release/${{ env.FILE_NAME }}-${{ github.event.release.name}}-amd64-1.txz *
           cd ../../release
-          sha256sum ${{ env.FILE_NAME }}-${{ github.event.release.name}}-noarch-1.txz | awk '{print $1}' > ${{ env.FILE_NAME }}-${{ github.event.release.name}}-noarch-1.txz.sha256
-          echo "checksum=$(cat ${{ env.FILE_NAME }}-${{ github.event.release.name}}-noarch-1.txz.sha256)" >> $GITHUB_OUTPUT
+          sha256sum ${{ env.FILE_NAME }}-${{ github.event.release.name}}-amd64-1.txz | awk '{print $1}' > ${{ env.FILE_NAME }}-${{ github.event.release.name}}-amd64-1.txz.sha256
+          echo "checksum=$(cat ${{ env.FILE_NAME }}-${{ github.event.release.name}}-amd64-1.txz.sha256)" >> $GITHUB_OUTPUT
 
       - uses: shogo82148/actions-upload-release-asset@v1
         with:
@@ -51,7 +51,7 @@ jobs:
         with:
           token: ${{secrets.GITHUB_TOKEN}}
           comment: |-
-            ${{ env.FILE_NAME }}-${{ github.event.release.name}}-noarch-1.txz : ${{ steps.build_files.outputs.checksum }}
+            ${{ env.FILE_NAME }}-${{ github.event.release.name}}-amd64-1.txz : ${{ steps.build_files.outputs.checksum }}
 
       - name: Template 
         uses: cuchi/jinja2-action@v1.2.2
