--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -66,12 +66,13 @@ jobs:
 
       - name: Commit plugin file
         run: |
+          cd main
           gh api graphql \
             -F $githubRepository=$GITHUB_REPOSITORY \
             -F branchName=$BRANCH \
             -F expectedHeadOid=$(git rev-parse HEAD) \
             -F commitMessage="release: update plugin file for ${{ github.event.release.name }}" \
-            -F files[][path]="plugin/motd.plg" -F files[][contents]=$(base64 -w0 plugin/motd.plg) \
+            -F pluginFile[path]="plugin/motd.plg" -F pluginFile[contents]=$(base64 -w0 plugin/motd.plg) \
             -F 'query=@.github/api/createCommitOnBranch.gql'
         env:
           GH_TOKEN: ${{ github.token }}
