--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -54,7 +54,7 @@ jobs:
             ${{ env.FILE_NAME }}-${{ github.event.release.name}}-amd64-1.txz : ${{ steps.build_files.outputs.checksum }}
 
       - name: Template
-        uses: cuchi/jinja2-action@v1.2.2
+        uses: cuchi/jinja2-action@0264c440d5561d32eee3d8239a9a637a96eb5a61
         with:
           template: main/plugin/motd.j2
           output_file: main/plugin/motd.plg
